# coding-sandbox

./: .gitignore  Doxyfile  Jenkinsfile  Makefile  Makefile.in  README.md
.docker/: Dockerfile  config.sh  find_make_directories.sh  include.sh  into.sh  run_cppcheck_on_subprojects.sh  run_docker.sh  run_gcovr_on_subprojects.sh  start_docker.sh
jenkins/: Makefile
jenkins/.docker/: Dockerfile  config.sh  include.sh  into.sh  run_docker.sh
projects/: Doxyfile  Makefile  Makefile.in
projects/.docker/: Dockerfile  find_make_directories.sh  include.sh  into.sh  run_cppcheck_on_subprojects.sh  run_docker.sh  run_gcovr_on_subprojects.sh
projects/ZZZ_template/: CMakeLists.txt  test.cpp
projects/ZZZ_template/cpp_templ/: Makefile
projects/ZZZ_template/gtk_templ/: CMakeLists.txt  Makefile
projects/ZZZ_template/gtk_templ/src/: DS_HelloGTKWindow.cpp  DS_HelloGTKWindow.hpp  main.cpp
projects/ZZZ_template/gtk_templ/test/: test.cpp
projects/ZZZ_template/rust_templ/: Makefile
projects/cpp/: .clang-format  .cppcheck_sys_inc  Makefile  MakefileCPP.in
projects/cpp/cmake/modules/: ClangTidy.cmake  CodeCoverage.cmake  CppCheck.cmake
projects/cpp/code_analysis/: CMakeLists.txt  Makefile
projects/cpp/code_analysis/src/: DS_FactoryMethod.cpp  DS_FactoryMethod.hpp
projects/cpp/code_analysis/test/: test.cpp
projects/cpp/design_patterns/creational/abstract_builder/: .clang-tidy  CMakeLists.txt  compile_commands.json
projects/cpp/design_patterns/creational/abstract_builder/src/: DS_Armor.cpp  DS_Armor.hpp
projects/cpp/design_patterns/creational/abstract_builder/test/: test_Armor.cpp  test_NPC.cpp
projects/cpp/design_patterns/creational/abstract_factory/: CMakeLists.txt  compile_commands.json
projects/cpp/design_patterns/creational/abstract_factory/src/: DS_AbstractFactory.cpp  DS_AbstractFactory.hpp
projects/cpp/design_patterns/creational/abstract_factory/test/: test.cpp
projects/cpp/design_patterns/creational/factory_method/: CMakeLists.txt  Makefile
projects/cpp/design_patterns/creational/factory_method/src/: DS_FactoryMethod.cpp  DS_FactoryMethod.hpp
projects/cpp/design_patterns/creational/factory_method/test/: test.cpp
projects/cpp/design_patterns/creational/prototype/: CMakeLists.txt
projects/cpp/design_patterns/creational/prototype/src/: DS_Prototype.cpp  DS_Prototype.hpp
projects/cpp/design_patterns/creational/prototype/test/: test.cpp
projects/cpp/design_patterns/creational/simple_builder/: CMakeLists.txt  Makefile
projects/cpp/design_patterns/creational/simple_builder/src/: DS_Armor.hpp  DS_NPC.cpp  DS_NPC.hpp
projects/cpp/design_patterns/creational/simple_builder/test/: test_Armor.cpp  test_NPC.cpp
projects/cpp/design_patterns/creational/singleton/: CMakeLists.txt  Makefile  compile_commands.json
projects/cpp/design_patterns/creational/singleton/src/: DS_Singleton.cpp  DS_Singleton.hpp
projects/cpp/design_patterns/creational/singleton/test/: test.cpp
projects/cpp/design_patterns/singleton/test/: test.cpp
projects/test_jenkins_fail/cpp_code_analyis/: CMakeLists.txt
projects/test_jenkins_fail/cpp_code_analyis/test/: test.cpp
